--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title> Assignment 2</title>
-        <link href="styles.css" rel="stylesheet">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
 
