--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       <li> It is useful </li>
     </ul>
         
+    <p> You may review my next work <a href="second.html">here</a> <br>
+     As you can see, I progressed a lot!. </p>
      
 
     </body>
