--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <li> It is useful </li>
     </ul>
         
-    <p> You may review my next work <a href="file:///C:/Users/fbourzikou/OneDrive%20-%20Guidepoint/Desktop/assignment%204b/second2.html">here</a> <br>
+    <p> You may review my next work <a href="file:///C:/Users/fbourzikou/OneDrive%20-%20Guidepoint/Desktop/assignment%204b/second.html">here</a> <br>
      As you can see, I progressed a lot!. </p>
      
 
